--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 # Ignore Mac DS_Store files
 .DS_Store
+
+.editorconfig
+node_modules
+__pycache__
+.venv
+.vscode
+
+getting-started/node/target
+getting-started/dotnet/*/bin
+getting-started/dotnet/*/obj
