--- a/getting-started/node/package.json
+++ b/getting-started/node/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "@osohq/express": "^0.3.2",
     "express": "^4.18.2",
-    "oso-cloud": "^1.0.2"
+    "prettier": "^2.8.8"
   }
 }
