--- a/getting-started/ruby/Gemfile
+++ b/getting-started/ruby/Gemfile
@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "oso-cloud"
-gem "sinatra"
+gem 'oso-cloud', '~>1'
+gem 'puma'
+gem 'sinatra'
