--- a/getting-started/node/package.json
+++ b/getting-started/node/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@osohq/express": "^0.3.2",
+    "oso-cloud": "^1.0.4",
     "express": "^4.18.2",
     "prettier": "^2.8.8"
   }
